fix: Adding gap between playlist button and input - for monkeys

--- a/src/GameMenu.module.scss
+++ b/src/GameMenu.module.scss
@@ -105,6 +105,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    gap: 16px;
 
   button {
     font-size: 16px;
@@ -120,6 +121,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    gap: 16px;
 
     input {
       width: 80%;
